--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,7 @@
 @layer base{
     html{
         font-family: 'Poppins', sans-serif;
+        background-image: url(http://pngimagesfree.com/Background/Cloud/Cloud_background_with_grass.jpg);
+        background-size:cover;
     }
 }
